log/build_2023-09-04_18-05-47/application/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/spider/gwpspider_ws/install/application/lib/python3.10/site-packages/application/app.py", line 1
    212]import rclpy
       ^
SyntaxError: unmatched ']'

